# lboxd-scraper

./: Dockerfile  README.md  pyproject.toml  requirements.dev
.github/workflows/: python-package.yml
src/lboxd_scraper/: lboxd.py  main.py
src/letterboxd_scraper/: main.py  utils.py
src/letterboxd_scraper_luke_gregorio.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: main_test.py
tests/lboxd_scraper/: lboxd_test.py  main_test.py
tests/letterboxd_scraper/: main_test.py
