[project]
name = "letterboxd_scraper_luke_gregorio"
version = "0.0.1"
authors = [
  { name="Lukr Gregorio", email="lukegregorio99@gmail.com" },
]
description = "A package with functions to scrape data from letterboxd"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]