[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lboxd_scraper"
version = "0.0.1"
authors = [
  { name="Luke Gregorio", email="author@example.com" },
]
description = "A package to help scrape letterboxd"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/lukegregorio/lboxd-scraper"

[tool.pytest.ini_options]
pythonpath = [
  "."
]