[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lboxd_scraper"]

[project]
name = "lboxd_scraper"
version = "0.0.4"
authors = [
  { name="Luke Gregorio", email="author@example.com" },
]
description = "A package to help scrape letterboxd"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/lukegregorio/lboxd-scraper"

[tool.pytest.ini_options]
pythonpath = [
  "."
]